--- a/scripts/conf/fusioninventory/agent.cfg
+++ b/scripts/conf/fusioninventory/agent.cfg
@@ -12,78 +12,78 @@
 # Testado e homologado para a versão do FusionInventory Server v9.5.x
 # Testado e homologado para a versão do FusionInventory Agent v2.6.x
 # Testado e homologado para a versão do GLPI Help Desk v9.5.x
-
+#
 # Endereço do Servidor do FusionInventory do GLPI Help Desk
 # OBSERVAÇÃO IMPORTANTE: no servidor Ubuntu Server utilizar o endereço
 # de Loopback (localhost), no agentes remotos mudar para o endereço de
 # rede: 172.16.1.20 ou CNAME: glpi.pti.intra
 server = http://localhost/glpi/plugins/fusioninventory/
-
-# Diretório temporário utilizado pelo inventário
+#
+# Diretório temporário utilizado pelo FusionInventory para o inventário
 local = /tmp
-
+#
 # Atraso máximo antes do primeiro inventário, configuração em segundos
 delaytime = 3600
-
+#
 # Não entre em contato com o servidor antes da próxima hora agendada
 lazy = 0
-
+#
 # Permitir a verificação de diretórios domésticos de usuários
 scan-homedirs = 0
-
+#
 # Permitir a verificação de perfis de usuários
 scan-profiles = 0
-
-# Salvar inventario como HTML
+#
+# Salvar inventário como HTML
 html = 0
-
-# Tempo limite para a execução dos módulos de inventário
+#
+# Tempo limite para a execução dos módulos do FusionInventory
 backend-collect-timeout = 180
-
-# Sempre enviar dados do inventário para o servidor
+#
+# Sempre enviar dados do inventário para o servidor do FusionInventory
 force = 0
-
+#
 # Não use peer-to-peer para baixar arquivos
 no-p2p = 0
-
-# Diretório dos Certificado CA
+#
+# Diretório dos Certificado CA do Agent do FusionInventory
 ca-cert-dir = 
-
-# Arquivo de Certificado CA
+#
+# Arquivo de Certificado CA do Agent do FusionInventory
 ca-cert-file = 
-
-# Não verifique o certificado SSL do servidor
+#
+# Não verifique o certificado SSL do servidor de FusionInventory
 no-ssl-check = 0
-
-# Tempo máximo de conenxão com o servidor
+#
+# Tempo máximo de conenxão com o servidor de FusionInventory
 timeout = 180
-
-# Desativar o servidor web incorporado
+#
+# Desativar o servidor web incorporado do Agent do FusionInventory
 no-httpd = 0
-
+#
 # Interface de rede para ouvir
 httpd-ip =
-
-# Configuração da Porta de comunicação do FusionInventory do GLPI
+#
+# Configuração da Porta de comunicação do FusionInventory no GLPI
 httpd-port = 62354
-
+#
 # Configuração da sada de erro
 logger = stderr
-
-# Arquivo de Log do inventário
+#
+# Arquivo de Log do inventário do Agent do FusionInventory
 logfile = /var/log/fusioninventory-agent/fusioninventory.log
-
+#
 # Tamanho máximo do Log em MB
 logfile-maxsize = 5
-
+#
 # Utilizar o Syslog
 logfacility = LOG_USER
-
-# Usar o console colorido
+#
+# Usar o console colorido do Agent do FusionInventory
 color = 1
-
-# Adicionar a TAG para o resultado do inventário
+#
+# Adicionar a TAG para o resultado do inventário no FusionInventory
 tag = Server
-
+#
 # Modo de Debug
 debug = 0
