--- a/scripts/conf/lamp/php.ini
+++ b/scripts/conf/lamp/php.ini
@@ -12,7 +12,17 @@
 ; Testado e homologado para a versão do PHP v7.4.x
 ;
 ; Configurações customizadas para os serviços do: ownCloud, ZoneMinder
+; 
+; Opções alteradas do ownCloud
+;	memory_limit = 256M
+;	file_uploads = On
+;	upload_max_filesize = 250M
+;	allow_url_fopen = On
 ;
+; Opções alteradas do ZoneMinder
+;	date.timezone = America/Sao_Paulo
+;
+; Bloco de configuração padrão do PHP 7.4.x
 [PHP]
 ;
 ; Name for user-defined php.ini (.htaccess) files.
