--- a/scripts/conf/loganalyzer/mysql.conf
+++ b/scripts/conf/loganalyzer/mysql.conf
@@ -15,5 +15,6 @@
 # Configurações Globais do recurso de armazenamento de Log no MySQL
 #
 # Habilitando o módulo do MySQL para suportar o Syslog/Rsyslog do LogAnalyzer
+# [port]:[module]:[server],[database],[user],[password]
 $ModLoad ommysql
 *.* :ommysql:localhost,syslog,syslog,syslog
