--- a/scripts/conf/ansible/rundeck-config.properties
+++ b/scripts/conf/ansible/rundeck-config.properties
@@ -3,17 +3,19 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 03/08/2020
-# Data de atualização: 04/08/2020
-# Versão: 0.1
-# Testado e homologado para a versão do Ubuntu Server 18.04 LTS x64
-# Kernel >= 4.15.x
-
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 16/12/2021
+# Data de atualização: 12/01/2022
+# Versão: 0.02
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do Ansible 2.9.x e do Rundeck 3.4.x
+#
 # Configuração do endereço IPv4 e Porta de Conexão do Servidor Ubuntu que está 
 # rodando o Rundeck, por padrão as configurações do Rundeck só responde para o 
 # endereço de Loopback
 grails.serverURL=http://172.16.1.20:4440
-
+#
 # Configuração padrão do Rundeck, recomendado não alterar os valores abaixo, 
 # somente se você leu o manual de customização e configuração avançada do Rundeck.
 loglevel.default=INFO
