--- a/scripts/conf/ubuntu/00-installer-config.yaml
+++ b/scripts/conf/ubuntu/00-installer-config.yaml
@@ -6,7 +6,7 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 10/01/2022
+# Data de atualização: 03/02/2022
 # Versão: 0.05
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 # Mais informações veja o arquivo: scripts/settings/04-ConfiguracaoDoNetplan.sh
@@ -14,28 +14,35 @@
 #
 # Configuração do Endereço IPv4 do Ubuntu Server
 network:
+  #
   # Configuração do Protocolo Ethernet do Ubuntu Server
   ethernets:
-    # Configuração da Placa de Rede do Ubuntu Server
+    #
+    # Configuração do Nome da Placa de Rede do Ubuntu Server
     enp0s3:
+      #
       # Configuração do Endereço IPv4 Dinâmico via DHCP do Ubuntu Server
       # OBSERVAÇÃO: por padrão o endereço IPv4 dinâmico em servidores não é utilizado
       #dhcp4: true
+      #
       # Configuração do Endereço IPv4 e CIDR Estático do Ubuntu Server
       addresses:
       - 172.16.1.20/24
+      #
       # Configuração do Endereço de Gateway IPv4 do Ubuntu Server
       gateway4: 172.16.1.254
+      #
       # Configuração dos Endereços de DNS Server IPv4 do Ubuntu Server
-      # Após a instalação e configuração do Bind DNS Server configurar o endereço
-      # principal de resolução do DNS para o servidor Ubuntu Server
       nameservers:
         addresses:
         #- 172.16.1.20
         - 172.16.1.254
         #- 8.8.8.8
-        #- 8.8.4.4
-        # Configuração do Nome de Pesquisa do Domínio DNS do Ubuntu Server
+        #- 8.8.8.8
+        #
+        # Configuração do Nome de Pesquisa DNS do Ubuntu Server
         search:
         - pti.intra
+        #
+  # Configuração da versão do Protocolo Ethernet do Ubuntu Server
   version: 2
