--- a/scripts/conf/nextcloud/nextcloud.conf
+++ b/scripts/conf/nextcloud/nextcloud.conf
@@ -6,29 +6,29 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 09/01/2022
-# Data de atualização: 09/01/2022
-# Versão: 0.01
+# Data de atualização: 04/02/2022
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x 
 # Testado e homologado para a versão do MySQL v8.0.x 
 # Testado e homologado para a versão do Nextcloud v23.x
-
+#
 #Configuração do Virtual Host do Nextcloud no Apache2 na porta padrão 80
 <VirtualHost *:80>
-
+	#
 	# Configuração do email do administrador do GLPI Help Desk
 	ServerAdmin admin@pti.intra
-	
+	#
 	# Configuração do Virtual Host que irá responder pelas requisições do Nextcloud
 	ServerName  next.pti.intra
 	ServerAlias nextcloud.pti.intra
- 
+	#
 	# Configuração do suporte aos arquivo index.php, index.html do Nextcloud
 	DirectoryIndex index.php index.html
-
+	#
 	# Diretório raiz da hospedagem do Nextcloud
 	DocumentRoot /var/www/html/next/
-
+	#
 	# Configuração das permissões do diretório raiz do Nextcloud
 	<Directory /var/www/html/own>
 		Require all granted
@@ -37,11 +37,9 @@
 		Order allow,deny
 		allow from all
 		Options FollowSymLinks MultiViews
+		DAV Off
 	</Directory>
-	<IfModule mod_dav.c>
-      Dav off
-    </IfModule>
-
+	#
 	# Configuração dos módulos de segurança de acesso ao Nextcloud (desativado)
 	#<IfModule mod_rewrite.c>
 	#	RewriteEngine On
@@ -53,9 +51,9 @@
 	#	RewriteRule ^(.*)$ - [S=1]
 	#	RewriteRule . /index.php [L]
 	#</IfModule>
-
+	#
  	# Configuração dos arquivos de Log do Nextcloud
 	ErrorLog ${APACHE_LOG_DIR}/error-nextcloud.log
 	CustomLog ${APACHE_LOG_DIR}/access-nextcloud.log combined
-	
+	#
 </VirtualHost>
