--- a/scripts/conf/influxdb/influxdb.conf
+++ b/scripts/conf/influxdb/influxdb.conf
@@ -1,200 +1,186 @@
-### Welcome to the InfluxDB configuration file.
-
-# The values in this file override the default values used by the system if
-# a config option is not specified. The commented out lines are the configuration
-# field and the default value used. Uncommenting a line and changing the value
-# will change the value used at runtime when the process is restarted.
-
-# Once every 24 hours InfluxDB will report usage data to usage.influxdata.com
-# The data includes a random ID, os, arch, version, the number of series and other
-# usage data. No data from user databases is ever transmitted.
-# Change this option to true to disable reporting.
-# reporting-disabled = false
-
-# Bind address to use for the RPC service for backup and restore.
-# bind-address = "127.0.0.1:8088"
-
-###
-### [meta]
-###
-### Controls the parameters for the Raft consensus group that stores metadata
-### about the InfluxDB cluster.
-###
-
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 04/02/2022
+# Data de atualização: 04/02/2022
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+#
+# Configurações Globais do InfluxDB
+#
+# Configuração do envio de dados para usage.influxdata.com
+#reporting-disabled = false
+#
+# Endereço de ligação a ser usado para o serviço RPC para backup e restauração.
+#bind-address = "127.0.0.1:8088"
+#
+# Controla os parâmetros do grupo de consenso Raft que armazena metadados sobre 
+# o cluster InfluxDB.
 [meta]
-  # Where the metadata/raft database is stored
-  dir = "/var/lib/influxdb/meta"
+	#
+	# Localização do Banco de Dados padrão do InfluxDB
+	dir = "/var/lib/influxdb/meta"
+	#
+	# Configuração da Retenção do Banco de Dados do InfluxDB
+	#retention-autocreate = true
 
-  # Automatically create a default retention policy when creating a database.
-  # retention-autocreate = true
-
-  # If log messages are printed for the meta service
-  # logging-enabled = true
-
-###
-### [data]
-###
-### Controls where the actual shard data for InfluxDB lives and how it is
-### flushed from the WAL. "dir" may need to be changed to a suitable place
-### for your system, but the WAL settings are an advanced configuration. The
-### defaults should work for most systems.
-###
-
+	# Configuração das Mensagens de Log do InfluxDB
+	#logging-enabled = true
+#
+# Controla onde os dados reais do shard para o InfluxDB estão e como estão
+# liberado do WAL. "dir" pode precisar ser alterado para um local adequado
+# para o seu sistema, mas as configurações do WAL são uma configuração avançada. 
+# O padrões devem funcionar para a maioria dos sistemas.
 [data]
-  # The directory where the TSM storage engine stores TSM files.
-  dir = "/var/lib/influxdb/data"
+	# The directory where the TSM storage engine stores TSM files.
+	dir = "/var/lib/influxdb/data"
 
-  # The directory where the TSM storage engine stores WAL files.
-  wal-dir = "/var/lib/influxdb/wal"
+	# The directory where the TSM storage engine stores WAL files.
+	wal-dir = "/var/lib/influxdb/wal"
 
-  # The amount of time that a write will wait before fsyncing.  A duration
-  # greater than 0 can be used to batch up multiple fsync calls.  This is useful for slower
-  # disks or when WAL write contention is seen.  A value of 0s fsyncs every write to the WAL.
-  # Values in the range of 0-100ms are recommended for non-SSD disks.
-  # wal-fsync-delay = "0s"
+	# The amount of time that a write will wait before fsyncing.  A duration
+	# greater than 0 can be used to batch up multiple fsync calls.  This is useful for slower
+	# disks or when WAL write contention is seen.  A value of 0s fsyncs every write to the WAL.
+	# Values in the range of 0-100ms are recommended for non-SSD disks.
+	# wal-fsync-delay = "0s"
 
+	# The type of shard index to use for new shards.  The default is an in-memory index that is
+	# recreated at startup.  A value of "tsi1" will use a disk based index that supports higher
+	# cardinality datasets.
+	# index-version = "inmem"
 
-  # The type of shard index to use for new shards.  The default is an in-memory index that is
-  # recreated at startup.  A value of "tsi1" will use a disk based index that supports higher
-  # cardinality datasets.
-  # index-version = "inmem"
+	# Trace logging provides more verbose output around the tsm engine. Turning
+	# this on can provide more useful output for debugging tsm engine issues.
+	# trace-logging-enabled = false
 
-  # Trace logging provides more verbose output around the tsm engine. Turning
-  # this on can provide more useful output for debugging tsm engine issues.
-  # trace-logging-enabled = false
+	# Whether queries should be logged before execution. Very useful for troubleshooting, but will
+	# log any sensitive data contained within a query.
+	# query-log-enabled = true
 
-  # Whether queries should be logged before execution. Very useful for troubleshooting, but will
-  # log any sensitive data contained within a query.
-  # query-log-enabled = true
+	# Provides more error checking. For example, SELECT INTO will err out inserting an +/-Inf value
+	# rather than silently failing.
+	# strict-error-handling = false
 
-  # Provides more error checking. For example, SELECT INTO will err out inserting an +/-Inf value
-  # rather than silently failing.
-  # strict-error-handling = false
+	# Validates incoming writes to ensure keys only have valid unicode characters.
+	# This setting will incur a small overhead because every key must be checked.
+	# validate-keys = false
 
-  # Validates incoming writes to ensure keys only have valid unicode characters.
-  # This setting will incur a small overhead because every key must be checked.
-  # validate-keys = false
+	# Settings for the TSM engine
 
-  # Settings for the TSM engine
+	# CacheMaxMemorySize is the maximum size a shard's cache can
+	# reach before it starts rejecting writes.
+	# Valid size suffixes are k, m, or g (case insensitive, 1024 = 1k).
+	# Values without a size suffix are in bytes.
+	# cache-max-memory-size = "1g"
 
-  # CacheMaxMemorySize is the maximum size a shard's cache can
-  # reach before it starts rejecting writes.
-  # Valid size suffixes are k, m, or g (case insensitive, 1024 = 1k).
-  # Values without a size suffix are in bytes.
-  # cache-max-memory-size = "1g"
+	# CacheSnapshotMemorySize is the size at which the engine will
+	# snapshot the cache and write it to a TSM file, freeing up memory
+	# Valid size suffixes are k, m, or g (case insensitive, 1024 = 1k).
+	# Values without a size suffix are in bytes.
+	# cache-snapshot-memory-size = "25m"
 
-  # CacheSnapshotMemorySize is the size at which the engine will
-  # snapshot the cache and write it to a TSM file, freeing up memory
-  # Valid size suffixes are k, m, or g (case insensitive, 1024 = 1k).
-  # Values without a size suffix are in bytes.
-  # cache-snapshot-memory-size = "25m"
+	# CacheSnapshotWriteColdDuration is the length of time at
+	# which the engine will snapshot the cache and write it to
+	# a new TSM file if the shard hasn't received writes or deletes
+	# cache-snapshot-write-cold-duration = "10m"
 
-  # CacheSnapshotWriteColdDuration is the length of time at
-  # which the engine will snapshot the cache and write it to
-  # a new TSM file if the shard hasn't received writes or deletes
-  # cache-snapshot-write-cold-duration = "10m"
+	# CompactFullWriteColdDuration is the duration at which the engine
+	# will compact all TSM files in a shard if it hasn't received a
+	# write or delete
+	# compact-full-write-cold-duration = "4h"
 
-  # CompactFullWriteColdDuration is the duration at which the engine
-  # will compact all TSM files in a shard if it hasn't received a
-  # write or delete
-  # compact-full-write-cold-duration = "4h"
+	# The maximum number of concurrent full and level compactions that can run at one time.  A
+	# value of 0 results in 50% of runtime.GOMAXPROCS(0) used at runtime.  Any number greater
+	# than 0 limits compactions to that value.  This setting does not apply
+	# to cache snapshotting.
+	# max-concurrent-compactions = 0
 
-  # The maximum number of concurrent full and level compactions that can run at one time.  A
-  # value of 0 results in 50% of runtime.GOMAXPROCS(0) used at runtime.  Any number greater
-  # than 0 limits compactions to that value.  This setting does not apply
-  # to cache snapshotting.
-  # max-concurrent-compactions = 0
+	# CompactThroughput is the rate limit in bytes per second that we
+	# will allow TSM compactions to write to disk. Note that short bursts are allowed
+	# to happen at a possibly larger value, set by CompactThroughputBurst
+	# compact-throughput = "48m"
 
-  # CompactThroughput is the rate limit in bytes per second that we
-  # will allow TSM compactions to write to disk. Note that short bursts are allowed
-  # to happen at a possibly larger value, set by CompactThroughputBurst
-  # compact-throughput = "48m"
+	# CompactThroughputBurst is the rate limit in bytes per second that we
+	# will allow TSM compactions to write to disk.
+	# compact-throughput-burst = "48m"
 
-  # CompactThroughputBurst is the rate limit in bytes per second that we
-  # will allow TSM compactions to write to disk.
-  # compact-throughput-burst = "48m"
+	# If true, then the mmap advise value MADV_WILLNEED will be provided to the kernel with respect to
+	# TSM files. This setting has been found to be problematic on some kernels, and defaults to off.
+	# It might help users who have slow disks in some cases.
+	# tsm-use-madv-willneed = false
 
-  # If true, then the mmap advise value MADV_WILLNEED will be provided to the kernel with respect to
-  # TSM files. This setting has been found to be problematic on some kernels, and defaults to off.
-  # It might help users who have slow disks in some cases.
-  # tsm-use-madv-willneed = false
+	# Settings for the inmem index
 
-  # Settings for the inmem index
+	# The maximum series allowed per database before writes are dropped.  This limit can prevent
+	# high cardinality issues at the database level.  This limit can be disabled by setting it to
+	# 0.
+	# max-series-per-database = 1000000
 
-  # The maximum series allowed per database before writes are dropped.  This limit can prevent
-  # high cardinality issues at the database level.  This limit can be disabled by setting it to
-  # 0.
-  # max-series-per-database = 1000000
+	# The maximum number of tag values per tag that are allowed before writes are dropped.  This limit
+	# can prevent high cardinality tag values from being written to a measurement.  This limit can be
+	# disabled by setting it to 0.
+	# max-values-per-tag = 100000
 
-  # The maximum number of tag values per tag that are allowed before writes are dropped.  This limit
-  # can prevent high cardinality tag values from being written to a measurement.  This limit can be
-  # disabled by setting it to 0.
-  # max-values-per-tag = 100000
+	# Settings for the tsi1 index
 
-  # Settings for the tsi1 index
+	# The threshold, in bytes, when an index write-ahead log file will compact
+	# into an index file. Lower sizes will cause log files to be compacted more
+	# quickly and result in lower heap usage at the expense of write throughput.
+	# Higher sizes will be compacted less frequently, store more series in-memory,
+	# and provide higher write throughput.
+	# Valid size suffixes are k, m, or g (case insensitive, 1024 = 1k).
+	# Values without a size suffix are in bytes.
+	# max-index-log-file-size = "1m"
 
-  # The threshold, in bytes, when an index write-ahead log file will compact
-  # into an index file. Lower sizes will cause log files to be compacted more
-  # quickly and result in lower heap usage at the expense of write throughput.
-  # Higher sizes will be compacted less frequently, store more series in-memory,
-  # and provide higher write throughput.
-  # Valid size suffixes are k, m, or g (case insensitive, 1024 = 1k).
-  # Values without a size suffix are in bytes.
-  # max-index-log-file-size = "1m"
-
-  # The size of the internal cache used in the TSI index to store previously 
-  # calculated series results. Cached results will be returned quickly from the cache rather
-  # than needing to be recalculated when a subsequent query with a matching tag key/value 
-  # predicate is executed. Setting this value to 0 will disable the cache, which may
-  # lead to query performance issues.
-  # This value should only be increased if it is known that the set of regularly used 
-  # tag key/value predicates across all measurements for a database is larger than 100. An
-  # increase in cache size may lead to an increase in heap usage.
-  series-id-set-cache-size = 100
-
-###
-### [coordinator]
-###
-### Controls the clustering service configuration.
-###
-
+	# The size of the internal cache used in the TSI index to store previously 
+	# calculated series results. Cached results will be returned quickly from the cache rather
+	# than needing to be recalculated when a subsequent query with a matching tag key/value 
+	# predicate is executed. Setting this value to 0 will disable the cache, which may
+	# lead to query performance issues.
+	# This value should only be increased if it is known that the set of regularly used 
+	# tag key/value predicates across all measurements for a database is larger than 100. An
+	# increase in cache size may lead to an increase in heap usage.
+	series-id-set-cache-size = 100
+#
+# Controla a configuração do serviço de cluster.
 [coordinator]
-  # The default time a write request will wait until a "timeout" error is returned to the caller.
-  # write-timeout = "10s"
 
-  # The maximum number of concurrent queries allowed to be executing at one time.  If a query is
-  # executed and exceeds this limit, an error is returned to the caller.  This limit can be disabled
-  # by setting it to 0.
-  # max-concurrent-queries = 0
+	# The default time a write request will wait until a "timeout" error is returned to the caller.
+	# write-timeout = "10s"
 
-  # The maximum time a query will is allowed to execute before being killed by the system.  This limit
-  # can help prevent run away queries.  Setting the value to 0 disables the limit.
-  # query-timeout = "0s"
+	# The maximum number of concurrent queries allowed to be executing at one time.  If a query is
+	# executed and exceeds this limit, an error is returned to the caller.  This limit can be disabled
+	# by setting it to 0.
+	# max-concurrent-queries = 0
 
-  # The time threshold when a query will be logged as a slow query.  This limit can be set to help
-  # discover slow or resource intensive queries.  Setting the value to 0 disables the slow query logging.
-  # log-queries-after = "0s"
+	# The maximum time a query will is allowed to execute before being killed by the system.  This limit
+	# can help prevent run away queries.  Setting the value to 0 disables the limit.
+	# query-timeout = "0s"
 
-  # The maximum number of points a SELECT can process.  A value of 0 will make
-  # the maximum point count unlimited.  This will only be checked every second so queries will not
-  # be aborted immediately when hitting the limit.
-  # max-select-point = 0
+	# The time threshold when a query will be logged as a slow query.  This limit can be set to help
+	# discover slow or resource intensive queries.  Setting the value to 0 disables the slow query logging.
+	# log-queries-after = "0s"
 
-  # The maximum number of series a SELECT can run.  A value of 0 will make the maximum series
-  # count unlimited.
-  # max-select-series = 0
+	# The maximum number of points a SELECT can process.  A value of 0 will make
+	# the maximum point count unlimited.  This will only be checked every second so queries will not
+	# be aborted immediately when hitting the limit.
+	# max-select-point = 0
 
-  # The maximum number of group by time bucket a SELECT can create.  A value of zero will max the maximum
-  # number of buckets unlimited.
-  # max-select-buckets = 0
+	# The maximum number of series a SELECT can run.  A value of 0 will make the maximum series
+	# count unlimited.
+	# max-select-series = 0
 
-###
-### [retention]
-###
-### Controls the enforcement of retention policies for evicting old data.
-###
-
+	# The maximum number of group by time bucket a SELECT can create.  A value of zero will max the maximum
+	# number of buckets unlimited.
+	# max-select-buckets = 0
+#
+# Controla a aplicação de políticas de retenção para despejar dados antigos.
 [retention]
+
   # Determines whether retention policy enforcement enabled.
   # enabled = true
 
