--- a/scripts/conf/prometheus/prometheus.yml
+++ b/scripts/conf/prometheus/prometheus.yml
@@ -1,29 +1,35 @@
-# my global config
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 04/02/2022
+# Data de atualização: 04/02/2022
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+#
+# Configurações Globais do Prometheus
 global:
-  scrape_interval: 15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
-  evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
-  # scrape_timeout is set to the global default (10s).
-
-# Alertmanager configuration
+  scrape_interval: 15s
+  evaluation_interval: 15s
+#
+# Configuração do Sistema de Gerenciamento de Alertas do Prometheus
 alerting:
   alertmanagers:
     - static_configs:
         - targets:
           # - alertmanager:9093
-
-# Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
+#
+# Configuração do Carregamento das Regras Periódica do Prometheus 
 rule_files:
   # - "first_rules.yml"
   # - "second_rules.yml"
-
-# A scrape configuration containing exactly one endpoint to scrape:
-# Here it's Prometheus itself.
+#
+# Configurações do Serviço do Prometheus (alterado a Porta para 9091 para não entrar
+# em conflito com o serviço do OpenFire, porta padrão do Prometheus 9090)
 scrape_configs:
-  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: "prometheus"
-
-    # metrics_path defaults to '/metrics'
-    # scheme defaults to 'http'.
-
     static_configs:
       - targets: ["localhost:9091"]
