--- a/scripts/conf/netdisco/deployment.yml
+++ b/scripts/conf/netdisco/deployment.yml
@@ -1,28 +1,29 @@
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Github: https://github.com/vaamonde
+# Data de criação: 06/02/2022
+# Data de atualização: 06/02/2022
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do Netdisco v2.x
 #
-# NETDISCO 2 CONFIGURATION FILE
+# Link do material detalhada das configurações do Netdisco
+# https://github.com/netdisco/netdisco/wiki/Configuration
 #
-# Settings in this file override share/config.yml
-#
-# https://github.com/netdisco/netdisco/wiki/Configuration has
-# in depth explanations about each setting.
-
-# ------------------
-# ESSENTIAL SETTINGS
-# ------------------
-
+# Configurações da Base de Dados do PostgreSQL do Netdisco
 database:
   name: 'netdisco'
   user: 'netdisco'
   pass: 'netdisco'
   #host: 'localhost'
-
-# --------------------
-# RECOMMENDED SETTINGS
-# --------------------
-
-# Device authentication settings
-# define snmp communities and ssh credentials here
-# ````````````````````````````````````````````````
+#
+# Configuração das Comunidades do SNMP para a Descoberta dos dispositivos
+# de rede utilizando o Netdisco
 device_auth:
   - tag: 'default_v2_readonly'
     community: 'public'
@@ -32,30 +33,23 @@ device_auth:
 #    community: 'private'
 #    read: false
 #    write: true
-
-# will be stripped from fqdn when displayed in the web UI
-# also, do not forget the leading dot.
-# ```````````````````````````````````````````````````````
+#
+# Configuração do Sufixo do DNS para o suporte ao FQDN do Netdisco
 domain_suffix: ['.pri.intra']
-
-# when serving over HTTPS this should be uncommented (enabled)
-# ````````````````````````````````````````````````````````````
+#
+# Configurações padrão do Netdisco (dexiar o padrão, alterar somente depois
+# de ler a documentação no site oficial)
+#
+# Habilitar o suporte ao HTTPS do Netdisco
 #session_secure: true
-
-# ¯`·.¸¸.·´¯`·.¸¸.·´¯`·.¸¸.·´¯`·.¸¸.·´¯`·.¸¸.·´¯`·.¸¸.·´¯`·.¸¸.·´¯`·.¸¸
 #
-# SOME MORE INTERESTING SETTINGS WHERE THE DEFAULTS ARE PROBABLY OKAY
-#
-# ¯`·.¸¸.·´¯`·.¸¸.·´¯`·.¸¸.·´¯`·.¸¸.·´¯`·.¸¸.·´¯`·.¸¸.·´¯`·.¸¸.·´¯`·.¸¸
-
-
 # discover Wireless Access Points, but not IP Phones
 # usually these are visible as device neighbors but don't support
 # SNMP, which just clogs up the job queue.
 # ```````````````````````````````````````````````````````````````
 #discover_waps: true
 #discover_phones: false
-
+#
 # this is the schedule for automatically keeping netdisco up-to-date;
 # these are good defaults, so only uncomment if needing to change.
 # (or set "schedule: null" if you wish to disable the scheduler)
@@ -74,26 +68,25 @@ domain_suffix: ['.pri.intra']
 #  expire:
 #    when: '30 23 * * *'
 #  makerancidconf: null
-
+#
 # number of SNMP workers to run in parallel (in netdisco-backend).
 # the default is twice the number of CPU cores. increase this if
 # your system has few cores and the schedule is taking too long.
 # ```````````````````````````````````````````````````````````````
 #workers:
 #  tasks: 'AUTO * 2'
-
+#
 # number of parallel DNS queries for node names
 # `````````````````````````````````````````````
 #dns:
 #  max_outstanding: 50
-
+#
 # set to true to globally disable authentication/login.
 # create a user called "guest" if you want to assign port/admin rights.
 # `````````````````````````````````````````````````````````````````````
 #no_auth: false
-
+#
 # set to false if you MUST maintain backwards compatibility
 # with Netdisco 1.x web frontend.
 # `````````````````````````````````````````````````````````
 #safe_password_store: true
-
