--- a/scripts/conf/lemp/50-server.cnf
+++ b/scripts/conf/lemp/50-server.cnf
@@ -1,16 +1,19 @@
 # Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 28/04/2021
-# Data de atualização: 28/04/2021
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 14/02/2022
+# Data de atualização: 14/02/2022
 # Versão: 0.01
-# Testado e homologado para a versão do Ubuntu Server 18.04.x LTS x64
-# Kernel >= 4.15.x
-
-# Configurações Globais do Servidor de MariaDB
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do MariaDB v.x
+#
+# Configurações principais do Servidor de MariaDB
 [server]
-
+#
 # Configurações Básicas do Servidor de MariaDB
 [mysqld]
 user		= mysql
@@ -22,10 +25,10 @@ datadir		= /var/lib/mysql
 tmpdir		= /tmp
 lc-messages-dir	= /usr/share/mysql
 skip-external-locking
-
+#
 # Desativando a resolução de endereço local, permitindo acesso remoto do MariaDB
 #bind-address		= 127.0.0.1
-
+#
 # Configurações de desempenho do MariaDB, aumentar o tamanho do Buffer e Packet
 key_buffer_size		= 16M
 max_allowed_packet	= 16M
@@ -35,22 +38,22 @@ myisam_recover_options  = BACKUP
 #max_connections        = 100
 #table_cache            = 64
 #thread_concurrency     = 10
-
+#
 # Configuração do Cache do MariaDB
 query_cache_limit	= 1M
 query_cache_size    = 16M
-
+#
 # Configuração do Arquivo de Log de Errors do MariaDB
 log_error = /var/log/mysql/error.log
 expire_logs_days	= 10
 max_binlog_size     = 100M
 #binlog_do_db		= include_database_name
 #binlog_ignore_db	= exclude_database_name
-
+#
 # Configuração do Caracteres do MariaDB
 character-set-server  = utf8mb4
 collation-server      = utf8mb4_general_ci
-
+#
 # Configurações padrão do MariaDB, deixar o padrão
 [embedded]
 [mariadb]
