--- a/scripts/conf/lemp/nginx.conf
+++ b/scripts/conf/lemp/nginx.conf
@@ -3,26 +3,28 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 31/05/2016
-# Data de atualização: 24/03/2017
-# Versão: 0.7
-# Testado e homologado para a versão do Ubuntu Server 18.04 LTS x64
-# Kernel >= 4.15.x
-
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 14/02/2022
+# Data de atualização: 14/02/2022
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do Nginx v.x
+#
 #Configurações básicas do Serviço do Nginx
 user www-data;
 worker_processes auto;
 pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
-
+#
 events {
 	worker_connections 768;
 	# multi_accept on;
 }
-
+#
 http {
-	
-	#Configurações básicas do servidor Http do Nginx
+	#	
+	# Configurações básicas do servidor Http do Nginx
 	sendfile on;
 	tcp_nopush on;
 	tcp_nodelay on;
@@ -30,19 +32,19 @@ http {
 	types_hash_max_size 2048;
 	include /etc/nginx/mime.types;
 	default_type application/octet-stream;
-	
-	#Configuração do suporte ao SSL
+	#
+	# Configuração do suporte ao SSL
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 	ssl_prefer_server_ciphers on;
-	
-	#Configuração dos arquivos de Logs
+	#
+	# Configuração dos arquivos de Logs
 	access_log /var/log/nginx/access.log;
 	error_log /var/log/nginx/error.log;
-	
-	#Suporte ao Gzip
+	#
+	# Suporte ao Gzip
 	gzip on;
-	
-	#Configuração do Host Virtual
+	#
+	# Configuração do Host Virtual
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
 }
