--- a/scripts/conf/lamp/php.ini
+++ b/scripts/conf/lamp/php.ini
@@ -6,12 +6,12 @@
 ; Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 ; Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 ; Data de criação: 15/10/2021
-; Data de atualização: 15/10/2021
-; Versão: 0.02
+; Data de atualização: 18/02/2022
+; Versão: 0.03
 ; Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 ; Testado e homologado para a versão do PHP v7.4.x
 ;
-; Configurações customizadas para os serviços do: ownCloud, ZoneMinder
+; Configurações customizadas para os serviços do: ownCloud, ZoneMinder, Wordpress
 ; 
 ; Opções alteradas do ownCloud
 ;	memory_limit = 256M
@@ -21,6 +21,9 @@
 ;
 ; Opções alteradas do ZoneMinder
 ;	date.timezone = America/Sao_Paulo
+;
+; Opções alteradas do Wordpress
+;	zlib.output_compression = On
 ;
 ; Bloco de configuração padrão do PHP 7.4.x
 [PHP]
@@ -59,8 +62,8 @@ output_buffering = 4096
 ; URL rewriter will not rewrite absolute URL nor form by default.
 ;url_rewriter.hosts
 ;
-; Transparent output compression using the zlib library
-zlib.output_compression = Off
+; Configuração utilizada pelo Wordpress (padrão Off mudado para On junto com as Bibliotecas) 
+zlib.output_compression = On
 ;zlib.output_compression_level = -1
 ;
 ; You cannot specify additional output handlers if zlib.output_compression
