--- a/scripts/conf/lamp/php.ini
+++ b/scripts/conf/lamp/php.ini
@@ -6,12 +6,12 @@
 ; Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 ; Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 ; Data de criação: 15/10/2021
-; Data de atualização: 18/02/2022
-; Versão: 0.03
+; Data de atualização: 20/02/2022
+; Versão: 0.04
 ; Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 ; Testado e homologado para a versão do PHP v7.4.x
 ;
-; Configurações customizadas para os serviços do: ownCloud, ZoneMinder, Wordpress
+; Configurações customizadas para os serviços do: ownCloud, ZoneMinder, Wordpress, GLPI
 ; 
 ; Opções alteradas do ownCloud
 ;	memory_limit = 256M
@@ -24,6 +24,11 @@
 ;
 ; Opções alteradas do Wordpress
 ;	zlib.output_compression = On
+;
+; Opções alteradas do GLPI
+;	max_execution_time = 600
+;	session.auto_start = Off
+;	session.use_trans_sid = 0
 ;
 ; Bloco de configuração padrão do PHP 7.4.x
 [PHP]
@@ -133,8 +138,8 @@ zend.exception_ignore_args = On
 ; (e.g. by adding its signature to the Web server header).
 expose_php = Off
 
-; Maximum execution time of each script, in seconds
-max_execution_time = 30
+; Configurações utilizadas pelo GLPI Help Desk
+max_execution_time = 600
 
 ; Maximum amount of time each script may spend parsing request data.
 max_input_time = 60
@@ -643,7 +648,9 @@ session.use_only_cookies = 1
 session.name = PHPSESSID
 
 ; Initialize session on request startup.
-session.auto_start = 0
+;
+; Configurações utilizadas pelo GLPI Help Desk
+session.auto_start = Off
 
 ; Lifetime in seconds of cookie or, if 0, until browser is restarted.
 session.cookie_lifetime = 0
@@ -687,7 +694,7 @@ session.cache_limiter = nocache
 ; http://php.net/session.cache-expire
 session.cache_expire = 180
 
-; Trans sid support is disabled by default.
+; Configurações utilizadas pelo GLPI Help Desk
 session.use_trans_sid = 0
 
 ; Set session ID character length. This value could be between 22 to 256.
