--- a/scripts/conf/ntp/timesyncd.conf
+++ b/scripts/conf/ntp/timesyncd.conf
@@ -6,13 +6,13 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 17/10/2021
-# Data de atualização: 17/10/2021
-# Versão: 0.01
+# Data de atualização: 24/03/2022
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 # Testado e homologado para a versão do NTP Server v4.2.
 #
 # Configuração global dos Servidores NTP que serão utilizados para sincronizar
 # a data e hora do servidor local Ubuntu Server
 [Time]
-NTP=a.st1.ntp.br
-FallbackNTP=a.ntp.br
+NTP=a.st1.ntp.br b.st1.ntp.br c.st1.ntp.br d.st1.ntp.br gps.ntp.br
+FallbackNTP=a.ntp.br b.ntp.br c.ntp.br
