--- a/scripts/conf/ntp/timesyncd.conf
+++ b/scripts/conf/ntp/timesyncd.conf
@@ -13,6 +13,10 @@
 #
 # Configuração global dos Servidores NTP que serão utilizados para sincronizar
 # a data e hora do servidor local Ubuntu Server
+# OBSERVAÇÃO IMPORTANTE: após a instalação e configuração do NTP Server no Ubuntu
+# o serviço do Timesync (systemd-timesyncd) e removido do servidor, não utilizando
+# mais o arquivo: timesyncd.conf para sincronizar a Data e Hora, sendo substituido
+# pelo arquivo ntp.conf.
 [Time]
 NTP=a.st1.ntp.br b.st1.ntp.br c.st1.ntp.br d.st1.ntp.br gps.ntp.br
 FallbackNTP=a.ntp.br b.ntp.br c.ntp.br
