--- a/scripts/conf/ntp/ntp.conf
+++ b/scripts/conf/ntp/ntp.conf
@@ -12,7 +12,7 @@
 # Testado e homologado para a versão do NTP Server v4.2.
 #
 # Mais informações sobre as configurações do ntp.conf acesse os sites:
-# Site1: http://ntp.br/guia-linux-avancado.php
+# Site1: https://ntp.br/guia/linux/
 # Site2: http://www.pool.ntp.org/pt/zone/br
 #
 # "memoria" para o escorregamento de frequência do micro, pode ser necessário criar esse 
