--- a/scripts/conf/lamp/default-ssl.conf
+++ b/scripts/conf/lamp/default-ssl.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/10/2021
-# Data de atualização: 21/11/2021
-# Versão: 0.02
+# Data de atualização: 28/03/2022
+# Versão: 0.03
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x e OpenSSL v1.1.x
 #
@@ -36,9 +36,9 @@
 		#
 		# Configuração do suporte ao TLS/SSL utilizando o certificado criado pelo OpenSSL
 		SSLEngine on
-		SSLCertificateFile /etc/ssl/newcerts/apache2-pticrt.crt
-		SSLCertificateKeyFile /etc/ssl/private/apache2-ptikey.key
-		SSLCertificateChainFile /etc/ssl/certs/ca-pticrt.pem
+		SSLCertificateFile /etc/ssl/newcerts/apache2.crt
+		SSLCertificateKeyFile /etc/ssl/private/apache2.key
+		SSLCertificateChainFile /etc/ssl/certs/pti-ca.pem
 		#
 		# Configuração padrão do suporte ao CGI do Apache2, recomendado não alterar
 		<FilesMatch "\.(cgi|shtml|phtml|php)$">
