--- a/scripts/conf/webdav/webdav.conf
+++ b/scripts/conf/webdav/webdav.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 08/01/2022
-# Data de atualização: 09/01/2022
-# Versão: 0.02
+# Data de atualização: 28/03/2022
+# Versão: 0.03
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x
 
@@ -36,9 +36,9 @@ DavLockDB /var/run/apache2/webdav/DavLock
 		#Configuração do suporte ao TLS/SSL utilizando o certificado criado pelo OpenSSL
 		#OBSERVAÇÃO: os certificados do Apache2 foram criados no script: 08-openssl.sh
 		SSLEngine on
-		SSLCertificateFile /etc/ssl/newcerts/apache2-pticrt.crt
-		SSLCertificateKeyFile /etc/ssl/private/apache2-ptikey.key
-		SSLCertificateChainFile /etc/ssl/certs/ca-pticrt.pem
+		SSLCertificateFile /etc/ssl/newcerts/apache2.crt
+		SSLCertificateKeyFile /etc/ssl/private/apache2.key
+		SSLCertificateChainFile /etc/ssl/certs/pti-ca.pem
 
 		#Configuração do Alias da Pasta do Webdav para montar os compartilhamentos remotos
 		Alias /webdav /var/www/webdav
