--- a/scripts/conf/ftp/vsftpd.conf
+++ b/scripts/conf/ftp/vsftpd.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/10/2021
-# Data de atualização: 06/12/2021
-# Versão: 0.03
+# Data de atualização: 28/03/2022
+# Versão: 0.04
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Vsftpd Server v3.0.x
 #
@@ -73,10 +73,11 @@ max_per_ip=8
 pam_service_name=vsftpd
 #
 # Localização do certificado e chave RSA para conexão criptografada do Vsftp Server
-# Veja os procedimentos de criação de CA e Certificados no script: 08-openssl.sh
+# Veja os procedimentos de criação de CA e Certificados nos scripts: 
+# 12-A-openssl-ca.sh e 12-C-openssl-vsftdp.sh
 ssl_enable=NO
-#rsa_cert_file=/etc/ssl/newcerts/vsftpd-pticrt.crt
-#rsa_private_key_file=/etc/ssl/private/vsftpd-ptikey.key
+#rsa_cert_file=/etc/ssl/newcerts/vsftpd.crt
+#rsa_private_key_file=/etc/ssl/private/vsftpd.key
 #implicit_ssl=YES
 #listen_port=990
 #allow_anon_ssl=NO
