--- a/scripts/conf/ntp/ntp.conf
+++ b/scripts/conf/ntp/ntp.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 10/12/2021
-# Versão: 0.04
+# Data de atualização: 30/03/2022
+# Versão: 0.05
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 # Testado e homologado para a versão do NTP Server v4.2.
 #
@@ -31,7 +31,7 @@ filegen peerstats file peerstats type day enable
 filegen clockstats file clockstats type day enable
 #
 # Configuração do Log do NTP Server
-logconfig =syncall +clockall
+logconfig =syncall +clockall +sysall
 #
 # Configuração da Interface de Rede permitida do NTP Server
 interface ignore all
