--- a/scripts/conf/ntp/ntp.conf
+++ b/scripts/conf/ntp/ntp.conf
@@ -38,6 +38,7 @@ interface ignore all
 interface listen enp0s3
 #
 # Servidores públicos do projeto ntp.br com suporte ao IPv4 e IPv6
+# server a.st1.ntp.br iburst maxpoll 9 prefer
 server a.st1.ntp.br iburst
 server b.st1.ntp.br iburst
 server c.st1.ntp.br iburst
@@ -53,6 +54,10 @@ server c.ntp.br iburst
 restrict 127.0.0.1
 restrict 127.0.1.1
 restrict default kod limited nomodify notrap nopeer noquery
+#
+# Configuração do relógio local indisciplinado
+#server 127.127.1.0 local clock
+#fudge 127.127.1.0 stratum 12
 #
 # Habilitando o serviço do comando monlist
 enable monitor
