--- a/scripts/conf/dhcp/dhcpd.conf
+++ b/scripts/conf/dhcp/dhcpd.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 11/03/2022
-# Versão: 0.08
+# Data de atualização: 31/03/2022
+# Versão: 0.09
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 # Testado e homologado para a versão do ISC DHCP Server v4.4.x
 # Testado e homologado para a versão do Bind DNS Sever v9.16.x
@@ -37,9 +37,10 @@ get-lease-hostnames on;
 # de atrasos na configuração do endereço IP.
 ping-check on;
 #
-# Configuração do tempo de aluguel dos Endereços IPv4 (minutos) do ISC DHCP Server
-default-lease-time 14400;
-max-lease-time 18000;
+# Configuração do tempo de aluguel dos Endereços IPv4 (segundos) do ISC DHCP Server
+default-lease-time 28800;
+max-lease-time 43200;
+min-lease-time 25200;
 #
 # Configuração do Log do ISC DHCP Server em relação ao Rsyslog
 log-facility local7;
@@ -101,7 +102,7 @@ subnet 172.16.1.0 netmask 255.255.255.0 {
 	option domain-name-servers 172.16.1.254, 8.8.8.8, 8.8.4.4;
 	# Endereço do NTP Server da subrede do escopo
 	option ntp-servers 172.16.1.20;
-	# Configuração do UTC Offset da subrede do escopo
+	# Configuração do UTC-3 (São Paulo) Time Offset (segundos) da subrede do escopo
 	option time-offset -10800;
 	# Configuração do Protocolo NetBIOS WINS
 	option netbios-name-servers 172.16.1.20;
