--- a/scripts/conf/lamp/awstats.pti.intra.conf
+++ b/scripts/conf/lamp/awstats.pti.intra.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/01/2022
-# Data de atualização: 18/01/2022
-# Versão: 0.01
+# Data de atualização: 09/04/2022
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do AWStats v7.x
 #
@@ -16,6 +16,9 @@
 # utilizado o comando: egrep -v '^(;|#|//|$)' awstats.conf > awstats.pti.intra.conf
 # para limpar o contéudo do arquivo awstats.conf e gerar o novo arquivo de config do
 # domínio que será analisado pelo AWStats.
+#
+# Localização do arquivo de configuração padrão do AWStats
+Include "/etc/awstats/awstats.conf.local"
 #
 # Localização do arquivo de acesso a páginas do Apache2
 LogFile="/var/log/apache2/access.log"
@@ -194,4 +197,4 @@ color_e="CEC2E8"
 color_x="C1B2E2"
 LoadPlugin="hashfiles"
 ExtraTrackedRowsLimit=500
-Include "/etc/awstats/awstats.conf.local"
+
