--- a/scripts/conf/lamp/mysqld.cnf
+++ b/scripts/conf/lamp/mysqld.cnf
@@ -6,17 +6,17 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 15/10/2021
-# Data de atualização: 03/12/2021
-# Versão: 0.04
+# Data de atualização: 14/04/2022
+# Versão: 0.05
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do MySQL v8.0.x
 #
 # Configurações principais do Servidor de MySQL
 [mysqld]
 user      = mysql
+port      = 3306
 pid-file  = /var/run/mysqld/mysqld.pid
 socket    = /var/run/mysqld/mysqld.sock
-port      = 3306
 datadir   = /var/lib/mysql
 tmpdir    = /tmp
 #
@@ -37,16 +37,23 @@ myisam-recover-options = BACKUP
 # max_connections      = 151
 # table_open_cache     = 4000
 #
-# Configuração do Arquivo de Log de Errors do MySQL
-log_error        = /var/log/mysql/error.log
-max_binlog_size  = 100M
+# Configuração do Arquivo de Log Geral do MySQL Server
+general_log_file    = /var/log/mysql/mysql-general.log
 #
-# Configurações avançadas do Log do Mysql (padrão desativadas)
-# slow_query_log             = 1
-# slow_query_log_file        = /var/log/mysql/mysql-slow.log
+# Configuração do Arquivo de Log de Erros do MySQL Server
+log_error            = /var/log/mysql/mysql-error.log
+#
+# Configuração do Arquivo de Log das Consultas Lentas do MySQL Server
+slow_query_log       = 1
+slow_query_log_file  = /var/log/mysql/mysql-slow.log
+#
+# Configuração do Arquivo de Log do Binário do MySQL Server
+log_bin              = /var/log/mysql/mysql-bin.log
+max_binlog_size      = 100M
+#
+# Configurações avançadas do Log do Mysql Server (padrão desativadas)
 # long_query_time            = 2
 # server-id                  = 1
-# log_bin                    = /var/log/mysql/mysql-bin.log
 # binlog_do_db               = include_database_name
 # binlog_ignore_db           = include_database_name
 # binlog_expire_logs_seconds = 2592000
