--- a/scripts/conf/ssl/ca.conf
+++ b/scripts/conf/ssl/ca.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/10/2021
-# Data de atualização: 10/12/2021
-# Versão: 0.02
+# Data de atualização: 17/04/2022
+# Versão: 0.03
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do OpenSSL v1.1.x
 #
@@ -43,16 +43,17 @@ emailAddress_default=pti@pti.intra
 [ ca ]
 default_ca=CA_default
 #
-# Bloco de configuração avançadas da CA.
+# Bloco de configuração avançada da CA.
 # Define os parametros avançados da criação e geração da CA e certificados.
+# OBSERVAÇÃO: CUIDADO COM A LOCALIZAÇÃO E NOME DA CHAVE E CERTIFICADO DA CA
 [ CA_default ]
 dir=/etc/ssl
 new_certs_dir=$dir/newcerts
 certs=$dir/certs
 crl_dir=$dir/crl
 crl=$dir/crl.pem
-private_key=$dir/private/ca-ptikey.key
-certificate=$dir/newcerts/ca-pticrt.crt
+private_key=$dir/private/pti-ca.key
+certificate=$dir/newcerts/pti-ca.crt
 RANDFILE=$dir/private/.rand
 crlnumber=$dir/crlnumber
 database=$dir/index.txt
