--- a/scripts/conf/ssl/vsftpd.conf
+++ b/scripts/conf/ssl/vsftpd.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/10/2021
-# Data de atualização: 10/12/2021
-# Versão: 0.02
+# Data de atualização: 17/04/2022
+# Versão: 0.03
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do OpenSSL v1.1.x e VSFTPD v3.0.x
 #
@@ -53,8 +53,8 @@ new_certs_dir=$dir/newcerts
 certs=$dir/certs
 crl_dir=$dir/crl
 crl=$dir/crl.pem
-private_key=$dir/private/ca-ptikey.key
-certificate=$dir/newcerts/ca-ptipem.pem
+private_key=$dir/private/pti-ca.key
+certificate=$dir/newcerts/pti-ca.crt
 RANDFILE=$dir/private/.rand
 crlnumber=$dir/crlnumber
 database=$dir/index.txt
@@ -77,7 +77,7 @@ emailAddress=optional
 # Bloco de configuração das requisições x509 da CA.
 # Esta seção define extensões x509 v3 a serem solicitadas em nossas solicitações.
 [ v3_req ]
-nsComment="Certificado Gerado pelo OpenSSL"
+nsComment="Certificado Gerado pelo OpenSSL VSFTPd"
 nsCertType=server
 subjectKeyIdentifier=hash
 extendedKeyUsage=serverAuth
@@ -85,7 +85,8 @@ basicConstraints=CA:FALSE
 keyUsage=digitalSignature,keyAgreement,keyEncipherment,dataEncipherment,nonRepudiation
 subjectAltName=@alternate_names
 #
-# Bloco de configuração dos nomes alternativos do certificado
+# Bloco de configuração dos nomes alternativos do certificado do VSFTPd
+# Adicionar todos os Nomes e Endereços IPv4 de acesso ao Servidor VSFTPd
 [ alternate_names ]
 IP.1=172.16.1.20
 DNS.1=ptispo01ws01.pti.intra
