--- a/scripts/conf/wordpress/wordpress.conf
+++ b/scripts/conf/wordpress/wordpress.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/10/2021
-# Data de atualização: 11/01/2022
-# Versão: 0.04
+# Data de atualização: 17/04/2022
+# Versão: 0.05
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x
 # Testado e homologado para a versão do Wordpress v5.8.x
@@ -26,10 +26,10 @@
 	DirectoryIndex index.php index.html install.php
 	#
 	# Diretório raiz da hospedagem do Wordpress
-	DocumentRoot /var/www/html/wp/
+	DocumentRoot /var/www/wp/
 	#
 	# Configuração das permissões do diretório raiz do Wordpress
-	<Directory /var/www/html/wp>
+	<Directory /var/www/wp>
 		Options Indexes FollowSymLinks MultiViews
 		AllowOverride All
 		Order allow,deny
